--- a/carpark-api/src/main/resources/application.properties
+++ b/carpark-api/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-carpark.data.url=https://api.data.gov.sg/v1/transport/carpark-availability
+
+
+carpark.availability.url=https://api.data.gov.sg/v1/transport/carpark-availability
+carpark.data.url=https://data.gov.sg/api/action/datastore_search?resource_id=139a3035-e624-4f56-b63f-89ae28d4ae4c&limit=2000&sort=x_coord,y_coord
